# chakshu-IVE

./: .dockerignore  .gitignore  AGENTS.md  AUTHORS.md  Build-Chakshu.bat  Build-Native.bat  Build-Portable.bat  Dockerfile  FORENSIC-GUIDE.md  Install-Prerequisites.bat  LICENSE  README.md  Run-Chakshu.bat  Run-Chakshu.sh  SIMPLE-START.txt  START.command  Setup-Chakshu.bat  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements-ai.txt  requirements-fast.txt  requirements-minimal.txt  requirements-reports.txt  requirements-video.txt  requirements.txt
config/: app.yaml
desktop/: README.md  main.js  package.json  preload.js
docs/: AI-ML-GUIDE.md  ARCHITECTURE.md  BRAND.md  COMPLIANCE-AND-TEST-STEPS.md  COMPLIANCE-SUMMARY.md  COPY-TO-WINDOWS.md  FFMPEG-CROSS-PLATFORM.md  LICENSE-AND-ACTIVATION.md  LOW-HANGING-COMPLIANCE-TEST-STEPS.md  MAC-DOCKER-AND-WINDOWS.md  PACKAGING-AUDIT.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md  PHASE-7.md  PHASE-8.md  REQUIREMENTS-COMPLIANCE.md  REQUIREMENTS-TEST-CHECKLIST.md  REQUIREMENTS-TEST-GUIDE.md  TESTING-VIDEO.md  WINDOWS-EXTRACT-AND-RUN.md  WINDOWS-INSTALL.md  WINDOWS-OFFLINE-CACHE.md  WINDOWS-QUICKSTART.md  WORKFLOW-TEST-GUIDE.md
examples/: README.md
frontend/: .env.development  index.html  package-lock.json  package.json  vite.config.js
models/: .gitkeep  README.md
scripts/: aive-api.spec  build_native.ps1  build_portable.ps1  build_windows.ps1  cache_windows_wheels.sh  check-filters-phase4.py  check-media-deps.py  dev.sh  generate-av-test-data.py  generate-overlay-test-media.py  install.ps1  (+16 more)
(+191 files in other folders)
